--- a/petstore.yaml
+++ b/petstore.yaml
@@ -1,28 +1,5 @@
 ---
   swagger: "2.0"
-  info: 
-    version: "1.0.0"
-    title: "Swagger Petstore"
-    description: "A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification"
-    termsOfService: "http://swagger.io/terms/"
-    contact: 
-      name: "Swagger API Team"
-      email: "apiteam@swagger.io"
-      url: "http://swagger.io"
-    license: 
-      name: "MIT"
-      url: "http://github.com/gruntjs/grunt/blob/master/LICENSE-MIT"
-  externalDocs: 
-    description: "find more info here"
-    url: "https://swagger.io/about"
-  host: "petstore.swagger.io"
-  basePath: "/api"
-  schemes: 
-    - "http"
-  consumes: 
-    - "application/json"
-  produces: 
-    - "application/json"
   paths: 
     /pets: 
       get: 
@@ -152,6 +129,8 @@
           type: "string"
         tag: 
           type: "string"
+        pet:
+          $ref: "#/definitions/NewPet"
     ErrorModel: 
       type: "object"
       required: 
